--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </nav>
         <div class="header__content">
-            <h1 class="title">Hush kelibsiz</h1>
+            <h1 class="title">Добро пожаловать на мой сайт</h1>
             <button class="btn">Позвонить</button>
         </div>
 
