--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
         </nav>
         <div class="header__content">
-            <h1 class="title">Hush kelibsiz</h1>
-            <button class="btn">Позвонить</button>
+            <h1 class="title">Hush kemabsiz</h1>
+            <button class="btn">BOOOOS</button>
         </div>
 
     </header>
